# advent-of-code

2024/17/: 17.py
2024/20/: 20.py
2025/: .gitignore  aoc2025.cabal
2025/app/: Main.hs
2025/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Lib.hs
