cabal-version:      3.0
name:               aoc2025
version:            0.1.0.0
synopsis:           Advent of Code 2025 solutions in Haskell
license:            MIT
author:             Robbie Overs
build-type:         Simple

common warnings
    ghc-options: -Wall -O2

library
    import:           warnings
    exposed-modules:
        Lib
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12
    build-depends:
        base ^>=4.17 || ^>=4.18 || ^>=4.19 || ^>=4.20,
        containers,
        text,
        split,
        vector,
        mtl,
        megaparsec,
        array
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2025
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17 || ^>=4.18 || ^>=4.19 || ^>=4.20,
        megaparsec ^>=9.7,
        aoc2025
    hs-source-dirs:   app
    default-language: Haskell2010
